# clv-prediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt  test.json
.github/workflows/: ci.yml
data/processed/: clv_modeling_table.parquet  customer_clv_6m.parquet
models/clv_linear_regression/: MLmodel  conda.yaml  model.pkl  requirements.txt
monitoring/: docker_wsl_dashboard.json  fastapi_dashboard.json  prometheus.yml
notebooks/: 01_eda_raw_data.ipynb  02_target_construction.ipynb  03_feature_engineering.ipynb  04_train_baseline.ipynb
src/: api.py  predict.py  test_predict.py  train.py  train_flow.py  train_v2.py
tests/: conftest.py  test_api.py  test_predictor.py
